added another keyword

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="DSC Kimathi University" />
     <meta name="description" content="Developer Student Clubs (DSC) is a Google Developers program for university students to learn mobile and web development skills.">
-    <meta name="keywords" content="dsc, kimathi university, samwel kamwana,google developers, sub saharan africa, kenya, computer science" />
+    <meta name="keywords" content="dsc, dsckimathi, kimathi university, samwel kamwana,google developers, sub saharan africa, kenya, computer science" />
     <link href="css/ionicons.min.css" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/fontawesome-all.min.css">
