added one more team member and edited

--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
                         <li class="owl-dot"></li>
                         <li class="owl-dot"></li>
                         <li class="owl-dot"></li>
+                        <li class="owl-dot"></li>
                     </ul>
                 </div>
                 <div class="col-md-11">
@@ -488,7 +489,7 @@
                                 <div class="col-12 col-md-4">
                                     <div class="team-item__thumb">
                                         <div class="team-item__image">
-                                            <img src="images/assets/team/job.jpg" alt="Image">
+                                            <img src="images/assets/team/teresa.png" alt="Image">
                                         </div>
                                     </div>
                                 </div>
@@ -500,7 +501,7 @@
                                             </p>
                                         </div>
                                         <div class="team-meta">
-                                            <h5>Job Getabu</h5>
+                                            <h5>Eva Wanini</h5>
                                             <p>Lead Organizer & Android developer</p>
                                         </div>
                                     </div>
@@ -513,7 +514,7 @@
                                 <div class="col-12 col-md-4">
                                     <div class="team-item__thumb">
                                         <div class="team-item__image">
-                                            <img src="images/assets/team/anne.jpg" alt="Image">
+                                            <img src="images/assets/team/teresa.png" alt="Image">
                                         </div>
                                     </div>
                                 </div>
@@ -525,7 +526,32 @@
                                                 Interact with different people and share experiences.</p>
                                         </div>
                                         <div class="team-meta">
-                                            <h5>Anne Wambui</h5>
+                                            <h5>Joy Kathure</h5>
+                                            <p>Community Mentor & 3rd Year Student.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </blockquote>
+
+                        <blockquote class="team-item">
+                            <div class="row align-items-center flex-column-reverse flex-md-row justify-content-sm-center">
+                                <div class="col-12 col-md-4">
+                                    <div class="team-item__thumb">
+                                        <div class="team-item__image">
+                                            <img src="images/assets/team/Teresa.png" alt="Image">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="team-content">
+                                        <div class="team-item__context">
+                                            <p class="vanish">Front-End Developer</p>
+                                            <p class="vanish">Learning how to code has given me problem-solving skills and a way to communicate with others on a technical level. I am learning how to solve using different programming languages and such. I love reading extensively.
+                                                Interact with different people and share experiences.</p>
+                                        </div>
+                                        <div class="team-meta">
+                                            <h5>Njambi Francis</h5>
                                             <p>Community Mentor & 3rd Year Student.</p>
                                         </div>
                                     </div>
@@ -556,8 +582,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">How frequently do events and workshops occur?</h5>
-                            <p>We have a hands-on session every Tuesday at SG25 from 1800hrs to 2030hrs. We also hold workshops and showcases & we would recommend you to join our community on <a href="https://www.meetup.com/DSC-Kimathi/">Meetup</a> to get
-                                updates.
+                            <p>We have a hands-on session every Sunday at R9 and R10 School of Business from 1400hrs to 1800hrs. We also hold workshops and showcases & we would recommend you to join our community on <a href="https://www.meetup.com/DSC-Kimathi-University-Meetup/">Meetup</a>                                to get updates.
                             </p>
                         </div>
                     </div>
@@ -582,7 +607,7 @@
                 </div>
             </div>
             <div class="mt-40 text-center">
-                <a href="mailto:team@dsckimathiuiversity.org" class="btn btn-primary btn-lg">Send us an email</a>
+                <a href="mailto:dsckimathi@gmail.com" class="btn btn-primary btn-lg">Send us an email</a>
             </div>
         </div>
     </section>
@@ -595,15 +620,15 @@
                         <img src="images/assets/logo.png" class="logo-sm mb-10" alt="Image">
                         <p>Copyright &copy; 2018. All Rights Reserved.</p>
                         <span>Feel free to drop us an email at </span>
-                        <a href="mailto:team@dsc.kimathiuniversity.ac.ke">team@dsc.kimathiuniversity.ac.ke</a>
+                        <a href="mailto:dsckimathi@gmail.com">dsckimathi@gmail.com</a>
                         <ul class="social-list__inline mt-10">
                             <li>
-                                <a href="https://twitter.com/DSCKimathiUni">
+                                <a href="https://twitter.com/dsckimathi">
                                     <i class="fab fa-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/dsckimathi">
+                                <a href="https://github.com/DSC-kimathi">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </li>
@@ -647,17 +672,17 @@
                                 <ul>
                                     <li class="list-unstyled">
                                         <li>
-                                            <a href="https://github.com/dsckimathi">Developers Forum</a>
+                                            <a href="https://github.com/DSC-kimathi">Developers Forum</a>
                                         </li>
                                         <li>
-                                            <a href="https://github.com/DSCLEADSAfrica">GitHub</a>
+                                            <a href="https://github.com/DSC-kimathi">GitHub</a>
                                         </li>
                                         <li>
                                             <a href="https://developer.android.com/dev-summit/community-guidelines/">Code of
                                     conduct</a>
                                         </li>
                                         <li>
-                                            <a href="https://github.com/dsckimathi">Release Notes</a>
+                                            <a href="https://github.com/DSC-kimathi">Release Notes</a>
                                         </li>
                                 </ul>
                             </div>
