updated meetup link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </li>
                 </ul>
                 <div class="custom-menu__right">
-                    <a href="https://www.meetup.com/DSC-Kimathi/" class="btn btn-primary btn-pills" target="_blank">RSVP for
+                    <a href="https://www.meetup.com/DSC-Kimathi-University-Meetup/" class="btn btn-primary btn-pills" target="_blank">RSVP for
                     Next Event</a>
                 </div>
             </div>
