added medium acc link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <a class="nav-link" href="#faqs">FAQs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://medium.com/search?q=DSCKimathi" target="_blank">Stories</a>
+                        <a class="nav-link" href="https://medium.com/@dsckimathi" target="_blank">Stories</a>
                     </li>
                 </ul>
                 <div class="custom-menu__right">
